tenants/tenant-acme4/api-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-app
    tenant: tenant-acme4
  name: api-app
  namespace: tenant-acme4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
      tenant: tenant-acme4
  template:
    metadata:
      labels:
        app: api-app
        tenant: tenant-acme4
    spec:
      containers:
      - image: nginx:1.27-alpine
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        name: api-app
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
