tenants/tenant-acme4/api-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-app
    tenant: tenant-acme4
  name: api-app-service
  namespace: tenant-acme4
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: api-app
    tenant: tenant-acme4
  type: ClusterIP
